manifests/applications/b4mad-meshtastic-gateway/perses/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.allow-http: "false"
  name: perses
spec:
  rules:
    - host: perses.b4mad.emea.operate-first.cloud
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: perses
                port:
                  number: 8080
  tls:
    - hosts:
        - perses.b4mad.emea.operate-first.cloud
      secretName: https-cert-perses.b4mad.emea.operate-first.cloud
