manifests/applications/b4mad-meshtastic-gateway/perses/server-0.21.0.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: networking
    app.kubernetes.io/instance: perses
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: perses
    app.kubernetes.io/part-of: perses
    app.kubernetes.io/version: v0.53.1
    helm.sh/chart: perses-0.21.0
  name: perses
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: perses
    app.kubernetes.io/name: perses
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: workload
    app.kubernetes.io/instance: perses
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: perses
    app.kubernetes.io/part-of: perses
    app.kubernetes.io/version: v0.53.1
    helm.sh/chart: perses-0.21.0
  name: perses
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: perses
      app.kubernetes.io/name: perses
  serviceName: perses-headless
  template:
    metadata:
      annotations:
        checksum/config: c1a68e8700cb4c030edd0dd45ed4eee4637fdee920cb25b56bf107aefc81cc80
      labels:
        app.kubernetes.io/instance: perses
        app.kubernetes.io/name: perses
    spec:
      containers:
      - env:
        - name: LABEL
          value: perses.dev/resource
        - name: LABEL_VALUE
          value: 'true'
        - name: FOLDER
          value: /etc/perses/provisioning
        - name: HEALTH_PORT
          value: '8081'
        - name: RESOURCE
          value: both
        image: docker.io/kiwigrid/k8s-sidecar:2.5.0
        name: perses-provisioning-sidecar
        volumeMounts:
        - mountPath: /etc/perses/provisioning
          name: provisioning
      - args:
        - --config=/etc/perses/config/config.yaml
        - --web.listen-address=:8080
        - --web.hide-port=false
        - --web.telemetry-path=/metrics
        - --log.level=info
        - --log.method-trace=true
        image: docker.io/persesdev/perses:v0.53.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/v1/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 5
        name: perses
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/v1/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /etc/perses/config
          name: config
        - mountPath: /perses
          name: data
        - mountPath: /etc/perses/provisioning
          name: provisioning
      securityContext: {}
      serviceAccountName: perses
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: perses
      - configMap:
          defaultMode: 420
          name: perses
        name: config
      - emptyDir: {}
        name: provisioning
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.allow-http: 'false'
  labels:
    app.kubernetes.io/instance: perses
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: perses
    app.kubernetes.io/part-of: perses
    app.kubernetes.io/version: v0.53.1
    helm.sh/chart: perses-0.21.0
  name: perses
spec:
  rules:
  - host: perses.b4mad.emea.operate-first.cloud
    http:
      paths:
      - backend:
          service:
            name: perses
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - perses.b4mad.emea.operate-first.cloud
    secretName: https-cert-perses.b4mad.emea.operate-first.cloud
